refactor my existing project and build again same project with vite tool which is amazing front-end tool to create any kind of front end project

--- a/index.html
+++ b/index.html
@@ -1,13 +1,348 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="keywords" content="C programming, programs, posts" />
+        <meta
+            name="description"
+            content="On this page you will find total 12 programs which are implemented in C programming language."
+        />
+        <meta http-equiv="refresh" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://fonts.googleapis.com/css?family=Open+Sans:100,200,300,400,600"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="css/style.css" />
+        <title>PiiC | Home Page</title>
+    </head>
+    <body>
+        <div class="body_container">
+            <header class="header">
+                <h1 class="header__title">
+                    <a href="./index.html" class="header__title-link">PiiC</a>
+                </h1>
+                <p class="header__tag-line">Programs implemented in C</p>
+            </header>
+            <nav class="navigation">
+                <ul class="navigation__list">
+                    <li class="navigation__item">
+                        <a href="./index.html" class="navigation__link">home</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a href="#about" class="navigation__link">about</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a href="#contact" class="navigation__link">contact</a>
+                    </li>
+                    <li class="navigation__item">
+                        <a href="#social" class="navigation__link">social</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="main-heading">
+                <h1 class="heading">Recent Posts</h1>
+            </div>
+            <main class="blog">
+                <!-- Recent Blog Post -->
+                <div class="blog__item">
+                    <img
+                        src="/images/thumbnail.jpg"
+                        alt="calculate sum of digits of given number by using recursion"
+                        class="blog__item__img"
+                    />
+                    <p class="blog__item__title">
+                        <a
+                            href="./posts/calculate_sum_of_digits_of_given_number_using_recursion.html"
+                            class="blog__item__title__link"
+                            >Find sum of digits of given number using
+                            recursion</a
+                        >
+                    </p>
+                    <div class="blog__item__author-date">
+                        <p class="blog__item__author">IIbrahimm</p>
+                        <p class="blog__item__date">Feb 3rd, 2022</p>
+                    </div>
+                </div>
+
+                <!-- post 1, home page -->
+                <div class="blog__item">
+                    <img
+                        src="/images/thumbnail.jpg"
+                        alt="calculate sum of digits of given number"
+                        class="blog__item__img"
+                    />
+                    <p class="blog__item__title">
+                        <a
+                            href="./posts/calculate_sum_of_digits_of_given_number.html"
+                            class="blog__item__title__link"
+                            >Calculate sum of digits of given number</a
+                        >
+                    </p>
+                    <div class="blog__item__author-date">
+                        <p class="blog__item__author">IIbrahimm</p>
+                        <p class="blog__item__date">Jan 6th, 2022</p>
+                    </div>
+                </div>
+
+                <!-- post 2, home page -->
+                <div class="blog__item">
+                    <img
+                        src="/images/thumbnail.jpg"
+                        alt="print 1 to n using recursion"
+                        class="blog__item__img"
+                    />
+                    <p class="blog__item__title">
+                        <a
+                            href="./posts/print_1_to_n_using_recursion.html"
+                            class="blog__item__title__link"
+                            >Print 1 to n numbers by using recursion</a
+                        >
+                    </p>
+                    <div class="blog__item__author-date">
+                        <p class="blog__item__author">IIbrahimm</p>
+                        <p class="blog__item__date">Jan 5th, 2022</p>
+                    </div>
+                </div>
+
+                <!-- post 3, home page -->
+                <div class="blog__item">
+                    <img
+                        src="/images/thumbnail.jpg"
+                        alt="print n to 1 using recursion"
+                        class="blog__item__img"
+                    />
+                    <p class="blog__item__title">
+                        <a
+                            href="./posts/print_n_to_1_using_recursion.html"
+                            class="blog__item__title__link"
+                            >Print n to 1 numbers by using recursion</a
+                        >
+                    </p>
+                    <div class="blog__item__author-date">
+                        <p class="blog__item__author">IIbrahimm</p>
+                        <p class="blog__item__date">Jan 5th, 2022</p>
+                    </div>
+                </div>
+
+                <!-- post 4, home page -->
+                <div class="blog__item">
+                    <img
+                        src="/images/thumbnail.jpg"
+                        alt="find nth term of fibonacci series"
+                        class="blog__item__img"
+                    />
+                    <p class="blog__item__title">
+                        <a
+                            href="./posts/find_nth_term_of_fibonacci_series.html"
+                            class="blog__item__title__link"
+                            >Find nth term of fibonacci series</a
+                        >
+                    </p>
+                    <div class="blog__item__author-date">
+                        <p class="blog__item__author">IIbrahimm</p>
+                        <p class="blog__item__date">Jan 5th, 2022</p>
+                    </div>
+                </div>
+
+                <!-- post 5, home page -->
+                <div class="blog__item">
+                    <img
+                        src="/images/thumbnail.jpg"
+                        alt="find area of given rectangle"
+                        class="blog__item__img"
+                    />
+                    <p class="blog__item__title">
+                        <a
+                            href="./posts/find_area_of_rectangle_upto_3_digits_after_decimal_point.html"
+                            class="blog__item__title__link"
+                            >Find area of given rectangle</a
+                        >
+                    </p>
+                    <div class="blog__item__author-date">
+                        <p class="blog__item__author">IIbrahimm</p>
+                        <p class="blog__item__date">Jan 3rd, 2022</p>
+                    </div>
+                </div>
+
+                <!-- post 6, home page -->
+                <div class="blog__item">
+                    <img
+                        src="/images/thumbnail.jpg"
+                        alt="find area of given circle"
+                        class="blog__item__img"
+                    />
+                    <p class="blog__item__title">
+                        <a
+                            href="./posts/find_area_of_given_circle.html"
+                            class="blog__item__title__link"
+                            >Find area of given circle</a
+                        >
+                    </p>
+                    <div class="blog__item__author-date">
+                        <p class="blog__item__author">IIbrahimm</p>
+                        <p class="blog__item__date">Jan 2nd, 2022</p>
+                    </div>
+                </div>
+
+                <!-- post 7, home page -->
+                <div class="blog__item">
+                    <img
+                        src="/images/thumbnail.jpg"
+                        alt="find prime factors of given number"
+                        class="blog__item__img"
+                    />
+                    <p class="blog__item__title">
+                        <a
+                            href="./posts/find_prime_factors_of_given_number.html"
+                            class="blog__item__title__link"
+                            >Find prime factors of given number</a
+                        >
+                    </p>
+                    <div class="blog__item__author-date">
+                        <p class="blog__item__author">IIbrahimm</p>
+                        <p class="blog__item__date">Jan 2nd, 2022</p>
+                    </div>
+                </div>
+
+                <!-- post 8, home page -->
+                <div class="blog__item">
+                    <img
+                        src="/images/thumbnail.jpg"
+                        alt="find average of given array elements"
+                        class="blog__item__img"
+                    />
+                    <p class="blog__item__title">
+                        <a
+                            href="./posts/calc_average_of_given_array_elements.html"
+                            class="blog__item__title__link"
+                            >Find average of given elements of integer array</a
+                        >
+                    </p>
+                    <div class="blog__item__author-date">
+                        <p class="blog__item__author">IIbrahimm</p>
+                        <p class="blog__item__date">Jan 1st, 2022</p>
+                    </div>
+                </div>
+
+                <!-- post 9, home page -->
+                <div class="blog__item">
+                    <img
+                        src="/images/thumbnail.jpg"
+                        alt="find_factorial_of_given_number"
+                        class="blog__item__img"
+                    />
+                    <p class="blog__item__title">
+                        <a
+                            href="./posts/find_factorial_of_given_number.html"
+                            class="blog__item__title__link"
+                            >Find factorial of given whole number</a
+                        >
+                    </p>
+                    <div class="blog__item__author-date">
+                        <p class="blog__item__author">IIbrahimm</p>
+                        <p class="blog__item__date">Jan 1st, 2022</p>
+                    </div>
+                </div>
+
+                <!-- post 10, home page -->
+                <div class="blog__item">
+                    <img
+                        src="/images/thumbnail.jpg"
+                        alt="create fibonacci series as per length"
+                        class="blog__item__img"
+                    />
+                    <p class="blog__item__title">
+                        <a
+                            href="./posts/create_fibonacci_series_as_per_length.html"
+                            class="blog__item__title__link"
+                            >Create fibonacci series as per length given by
+                            user</a
+                        >
+                    </p>
+                    <div class="blog__item__author-date">
+                        <p class="blog__item__author">IIbrahimm</p>
+                        <p class="blog__item__date">Dec 29th, 2021</p>
+                    </div>
+                </div>
+
+                <!-- post 11, home page -->
+                <div class="blog__item">
+                    <img
+                        src="/images/thumbnail.jpg"
+                        alt="check whether given natural number is prime or not"
+                        class="blog__item__img"
+                    />
+                    <p class="blog__item__title">
+                        <a
+                            href="./posts/check_whether_given_natural_number_is_prime_or_not.html"
+                            class="blog__item__title__link"
+                            >Check whether given natural number is prime or
+                            not</a
+                        >
+                    </p>
+                    <div class="blog__item__author-date">
+                        <p class="blog__item__author">IIbrahimm</p>
+                        <p class="blog__item__date">Dec 29th, 2021</p>
+                    </div>
+                </div>
+            </main>
+            <div class="prev-next">
+                <p class="prev">
+                    <a href="#" class="navigation__link">&larr; prev</a>
+                </p>
+                <p class="next">
+                    <a
+                        href="./posts_thumbnail/blog_post_2.html"
+                        class="navigation__link"
+                        >next &rarr;</a
+                    >
+                </p>
+            </div>
+            <footer class="footer" id="go-to-footer">
+                <div class="footer__body">
+                    <div class="footer__logo">
+                        <p class="footer__title">
+                            <a href="./index.html" class="footer__logo-link"
+                                >PiiC</a
+                            >
+                        </p>
+                        <address class="footer__address">
+                            Ranpur Khurd(Takia), Ambikapur, Surguja CG.
+                        </address>
+                    </div>
+                    <div class="footer__about" id="about">
+                        <h2 class="footer__heading">about</h2>
+                        <p class="footer__about-description">
+                            I'm IIbrahimm Ansaarii. I'm a programmer and
+                            currently studying master of science in computer
+                            science.
+                        </p>
+                    </div>
+                    <div class="footer__contact" id="contact">
+                        <h2 class="footer__heading">contact</h2>
+                        <p>Email:</p>
+                        <p>iamibrahimansari@gmail.com</p>
+                        <p>Cellphone:</p>
+                        <p>8103682534</p>
+                    </div>
+                    <div class="footer__social" id="social">
+                        <a href="#" class="footer__link link1">
+                            <p>facebook</p>
+                        </a>
+                        <a href="#" class="footer__link link2">
+                            <p>instagram</p>
+                        </a>
+                        <a href="#" class="footer__link link3">
+                            <p>twitter</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="footer__copyright">
+                    Copyright &copy; 2021. All right reserved.
+                </div>
+            </footer>
+        </div>
+    </body>
 </html>
