--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                 <!-- post 11, home page -->
                 <div class="blog__item">
                     <img
-                        src="/public/images/thumbnail.jpg"
+                        src="public/images/thumbnail.jpg"
                         alt="check whether given natural number is prime or not"
                         class="blog__item__img"
                     />
