--- a/posts_thumbnail/blog_post_2.html
+++ b/posts_thumbnail/blog_post_2.html
@@ -53,7 +53,7 @@
                 <!-- previous Post, second page -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="public/images/thumbnail.jpg"
                         alt="find largest number between 2 numbers"
                         class="blog__item__img"
                     />
