fix post images

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <!-- Recent Blog Post -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="./images/thumbnail.jpg"
                         alt="calculate sum of digits of given number by using recursion"
                         class="blog__item__img"
                     />
@@ -69,7 +69,7 @@
                 <!-- post 1, home page -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="./images/thumbnail.jpg"
                         alt="calculate sum of digits of given number"
                         class="blog__item__img"
                     />
@@ -89,7 +89,7 @@
                 <!-- post 2, home page -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="./images/thumbnail.jpg"
                         alt="print 1 to n using recursion"
                         class="blog__item__img"
                     />
@@ -109,7 +109,7 @@
                 <!-- post 3, home page -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="./images/thumbnail.jpg"
                         alt="print n to 1 using recursion"
                         class="blog__item__img"
                     />
@@ -129,7 +129,7 @@
                 <!-- post 4, home page -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="./images/thumbnail.jpg"
                         alt="find nth term of fibonacci series"
                         class="blog__item__img"
                     />
@@ -149,7 +149,7 @@
                 <!-- post 5, home page -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="./images/thumbnail.jpg"
                         alt="find area of given rectangle"
                         class="blog__item__img"
                     />
@@ -169,7 +169,7 @@
                 <!-- post 6, home page -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="./images/thumbnail.jpg"
                         alt="find area of given circle"
                         class="blog__item__img"
                     />
@@ -189,7 +189,7 @@
                 <!-- post 7, home page -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="./images/thumbnail.jpg"
                         alt="find prime factors of given number"
                         class="blog__item__img"
                     />
@@ -209,7 +209,7 @@
                 <!-- post 8, home page -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="./images/thumbnail.jpg"
                         alt="find average of given array elements"
                         class="blog__item__img"
                     />
@@ -229,7 +229,7 @@
                 <!-- post 9, home page -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="./images/thumbnail.jpg"
                         alt="find_factorial_of_given_number"
                         class="blog__item__img"
                     />
@@ -249,7 +249,7 @@
                 <!-- post 10, home page -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="./images/thumbnail.jpg"
                         alt="create fibonacci series as per length"
                         class="blog__item__img"
                     />
@@ -270,7 +270,7 @@
                 <!-- post 11, home page -->
                 <div class="blog__item">
                     <img
-                        src="public/images/thumbnail.jpg"
+                        src="./images/thumbnail.jpg"
                         alt="check whether given natural number is prime or not"
                         class="blog__item__img"
                     />
