--- a/posts_thumbnail/blog_post_2.html
+++ b/posts_thumbnail/blog_post_2.html
@@ -53,7 +53,7 @@
                 <!-- previous Post, second page -->
                 <div class="blog__item">
                     <img
-                        src="public/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="find largest number between 2 numbers"
                         class="blog__item__img"
                     />
@@ -73,7 +73,7 @@
                 <!-- post 1, page 2 -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="find ascii code for given character"
                         class="blog__item__img"
                     />
@@ -93,7 +93,7 @@
                 <!-- post 2, second page -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="check whether given letter is vowel or consonant"
                         class="blog__item__img"
                     />
@@ -114,7 +114,7 @@
                 <!-- post 3, second page -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="print all english letters"
                         class="blog__item__img"
                     />
@@ -135,7 +135,7 @@
                 <!-- post 4, second page -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="print table of given integer upto 10"
                         class="blog__item__img"
                     />
@@ -155,7 +155,7 @@
                 <!-- post 5, second page -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="swap 2 numbers using temp variable"
                         class="blog__item__img"
                     />
@@ -175,7 +175,7 @@
                 <!-- post 6, second page -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="swap 2 numbers without temporary variable"
                         class="blog__item__img"
                     />
@@ -195,7 +195,7 @@
                 <!-- post 7, second page -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="swap 2 given numbers using pointers"
                         class="blog__item__img"
                     />
@@ -215,7 +215,7 @@
                 <!-- post 8, second page -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="check whether a given number is even or odd"
                         class="blog__item__img"
                     />
@@ -235,7 +235,7 @@
                 <!-- post 9, second page -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="check whether a given number is even or odd without modulus operator"
                         class="blog__item__img"
                     />
@@ -255,7 +255,7 @@
                 <!-- post 10, second page -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="check whether a given number is even or odd without arithmetic operator"
                         class="blog__item__img"
                     />
@@ -276,7 +276,7 @@
                 <!-- post 11, home page -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="find largest number between 3 numbers"
                         class="blog__item__img"
                     />
