--- a/posts_thumbnail/blog_post_3.html
+++ b/posts_thumbnail/blog_post_3.html
@@ -53,7 +53,7 @@
                 <!-- previous post, page 3 -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="find largest number between 2 numbers"
                         class="blog__item__img"
                     />
@@ -73,7 +73,7 @@
                 <!-- post 1, page 3 -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="find largest number between 3 numbers"
                         class="blog__item__img"
                     />
@@ -93,7 +93,7 @@
                 <!-- post 2, page 3 -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="find ascii code for given character"
                         class="blog__item__img"
                     />
@@ -113,7 +113,7 @@
                 <!-- post 3, page 3 -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="check whether given letter is vowel or consonant"
                         class="blog__item__img"
                     />
@@ -133,7 +133,7 @@
                 <!-- post 4, page 3 -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="print all english letters"
                         class="blog__item__img"
                     />
@@ -153,7 +153,7 @@
                 <!-- post 5, page 3 -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="print table of given integer upto 10"
                         class="blog__item__img"
                     />
@@ -173,7 +173,7 @@
                 <!-- post 6, page 3 -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="swap 2 numbers using temp variable"
                         class="blog__item__img"
                     />
@@ -193,7 +193,7 @@
                 <!-- post 7, page 3 -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="swap 2 numbers without temporary variable"
                         class="blog__item__img"
                     />
@@ -213,7 +213,7 @@
                 <!-- post 8, page 3 -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="swap 2 given numbers using pointers"
                         class="blog__item__img"
                     />
@@ -233,7 +233,7 @@
                 <!-- post 9, page 3 -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="check whether a given number is even or odd"
                         class="blog__item__img"
                     />
@@ -253,7 +253,7 @@
                 <!-- post 10, page 3 -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="check whether a given number is even or odd without modulus operator"
                         class="blog__item__img"
                     />
@@ -273,7 +273,7 @@
                 <!-- post 11, page 3 -->
                 <div class="blog__item">
                     <img
-                        src="/images/thumbnail.jpg"
+                        src="../images/thumbnail.jpg"
                         alt="check whether a given number is even or odd without arithmetic operator"
                         class="blog__item__img"
                     />
